--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="icon">
                 </div>
                 <div class="info">
-                    <h3>No lashy emotes</h3>
+                    <h3>No flashy emotes</h3>
                    
                 </div>
             </div>
