--- a/index.html
+++ b/index.html
@@ -230,24 +230,24 @@
             </div>
               <div class="staff-card">
                 <div class="staff-image">
-                    <img src="Images/snomy.gif"/>
+                    <img src="Images/MrMins.jpg"/>
                 </div>
                <div class="staff-info">
                   
                     <strong class="staff-title">
-                        <span>Snomy</span>
+                        <span>MrMins</span>
 
                     </strong>
                 </div>
             </div>
                        <div class="staff-card">
                 <div class="staff-image">
-                    <img src="Images/keledo.jpg"/>
+                    <img src="Images/PinkUnicorn.jpg"/>
                 </div>
                 <div class="staff-info">
                     
                     <strong class="staff-title">
-                        <span>Keledo</span>
+                        <span>PinkUnicorn</span>
 
                     </strong>
                 </div>
